genetic demo refurbish